remove some junk from front page

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -44,6 +44,7 @@
 
 		<header>
 			<a href="/" class="home-link">{{ metadata.title }}</a>
+			<span>{{ metadata.description }}</span>
 
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
 			<nav>
