--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -12,6 +12,9 @@
 	--text-color-link-active: #5f2b48;
 	--text-color-link-visited: #17050F;
 
+	--title-color: #d10000;
+	--title-outline-color: var(--color-gray-20);
+
 	--syntax-tab-size: 2;
 }
 
