--- a/css/elements/_body.scss
+++ b/css/elements/_body.scss
@@ -13,5 +13,5 @@ html {
 	overflow-y: scroll;
 }
 body {
-	max-width: 40em; // TODO widen this a lot
+	max-width: 60rem; // 960px at 16px font size
 }
