--- a/css/elements/_text.scss
+++ b/css/elements/_text.scss
@@ -24,6 +24,21 @@ a[href] {
 	}
 }
 
+h1, h2, h3 {
+	color: var(--heading-color);
+
+	a[href] {
+		color: var(--heading-color-link);
+
+		&:visited {
+			color: var(--heading-color-link-visited);
+		}
+		&:hover, &:active {
+			color: var(--heading-color-link-active);
+		}
+	}
+}
+
 pre,
 code {
 	font-family: var(--font-family-monospace), monospace;
