tweak color scheme a little more

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -8,9 +8,9 @@
 	--theme-color-white: #ded3d8;
 	--theme-color-lightest: #c9b7bf;
 	--theme-color-lighter: #9e8b93;
-	--theme-color-light: #907d85;
+	--theme-color-light: #89767e;
 	--theme-color: #746169;
-	--theme-color-dark: #5a474f;
+	--theme-color-dark: #604d55;
 	--theme-color-darker: #4d3a42;
 	--theme-color-darkest: #29171f;
 	--theme-color-black: #1a0f14;
