--- a/css/modules/_site-header.scss
+++ b/css/modules/_site-header.scss
@@ -4,7 +4,7 @@ header.site-header {
 	container-type: inline-size;
 
 	margin: 0;
-	padding: 1em;
+	padding: 2rem 1rem;
 	border-bottom: 1px solid var(--heading-color);
 
 	background-image: url(/img/digby_transparent.png);
@@ -47,9 +47,9 @@ header.site-header {
 .subtitle {
 	width: fit-content;
 	height: 2em; // to hide the extra line from the spacer element
-	margin: 0;
+	margin: 0.5rem 0 0;
 
-	line-height: 1;
+	line-height: 0.9;
 	text-align: justify;
 	color: var(--heading-color);
 
