--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -1,6 +1,7 @@
-/* Defaults */
+/* Fonts */
 
 :root {
 	--font-family: -apple-system, system-ui, sans-serif;
 	--font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
+	--font-size: 16px; // default value, but we might want to change this depending on the font we use
 }
