--- a/css/elements/_body.scss
+++ b/css/elements/_body.scss
@@ -1,4 +1,4 @@
-@use "../defaults";
+@use "../fonts";
 @use "../theme";
 
 html,
@@ -6,6 +6,7 @@ body {
 	padding: 0;
 	margin: 0 auto;
 	font-family: var(--font-family), sans-serif;
+	font-size: var(--font-size);
 	color: var(--text-color);
 	background-color: var(--background-color);
 }
