--- a/css/modules/_nav.scss
+++ b/css/modules/_nav.scss
@@ -3,10 +3,11 @@
 $nav-link-padding: 0.5em;
 
 .nav {
-	margin: 1rem 0 0;
+	margin: 1.6rem 0 0; // kinda eyeballed
 
 	ul {
 		display: flex;
+		flex-flow: row wrap;
 		gap: .5em 1em;
 		margin: 0 0 0 0-$nav-link-padding; // make up for side padding on nav items
 		padding: 0;
