--- a/css/modules/_site-header.scss
+++ b/css/modules/_site-header.scss
@@ -12,51 +12,67 @@ header.site-header {
 	background-position: center right;
 	background-origin: content-box;
 	background-repeat: no-repeat;
+
+	@media screen and (max-width: 480px) {
+		background: none;
+	}
 }
 
 .site-title {
+	display: block;
 	margin: 0;
 
 	white-space: nowrap;
 	text-shadow: 0 0 10px black;
+	text-decoration: none;
 
 	font-family: "Breathe Fire IV", serif;
-	font-size: 17.9cqw;
+	font-size: max(17.9cqw, 40px);
 	font-weight: 700;
 	font-variant: small-caps;
 
-	color: var(--title-color); // fallback for non-webkit browsers
+	&, &:link, &:visited {
+		color: var(--title-color); // fallback for non-webkit browsers
 
-	-webkit-text-stroke: 1px var(--title-outline-color);
-	-webkit-text-fill-color: var(--title-color);
-
-	&[href], &:visited, &[href]:visited {
-		color: var(--text-color);
+		-webkit-text-stroke: 0.0001em var(--title-outline-color);
+		-webkit-text-fill-color: var(--title-color);
 	}
-
-	&:link {
-		text-decoration: none;
-	}
-
 	&:hover {
 		-webkit-text-stroke-color: var(--title-hover-outline-color);
 		-webkit-text-fill-color: var(--title-hover-color);
 	}
+
+	@media screen and (max-width: 480px) { // probably unnecessary, but shrug
+		width: min-content;
+		white-space: wrap;
+		font-size: max(45cqw, 40px);
+		text-align: center;
+		align-self: center;
+		margin: 0 auto;
+		line-height: 0.6;
+	}
 }
 
 .subtitle {
-	width: fit-content;
-	height: 2em; // to hide the extra line from the spacer element
-	margin: 0.5rem 0 0;
+	$line-height: 0.9;
 
-	line-height: 0.9;
+	width: fit-content;
+	margin-top: -0.1em; // to even out the apparent spacing between lines TODO this looks wrong at smaller sizes actually
+	margin-bottom: -#{$line-height}em;  // to hide the extra line from the spacer element
+
+	line-height: $line-height;
 	text-align: justify;
 	color: var(--heading-color);
 
 	font-family: "Bardolatry", serif;
-	font-size: 5.9cqw;
+	font-size: max(5.9cqw, 24px);
 
 	// all small-caps just looks a little better than all caps for some reason
 	font-variant: small-caps;
 	text-transform: lowercase;
+
+	@media screen and (max-width: 480px) {
+		font-size: max(8.4cqw, 36px);
+		margin-top: 3.5rem;
+	}
 }
