--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -8,7 +8,7 @@
 			{{ post.date | readableDate("DDD") }}
 		</time>
 		<blockquote class="postlist-excerpt">{% excerpt post %}</blockquote>
-		<p><a href="{{ post.url }}" class="postlist-link">Read more</a></p>
+		<p><a href="{{ post.url }}">Read more</a></p>
 	</li>
 {%- endfor %}
 </ol>
