--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -33,6 +33,10 @@
 	--title-hover-outline-color: white;
 
 	--divider-color: var(--theme-color-dark);
+	--divider: 3px double var(--divider-color);
+
+	--spacing-vertical: 2rem;
+	--spacing-horizontal: 1rem;
 
 	--syntax-tab-size: 2;
 }
