--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,14 +1,19 @@
-<ol reversed class="postlist" style="--postlist-index: {{ (postslistCounter or postslist.length) + 1 }}">
+<ol reversed class="postlist">
 {%- for post in postslist | reverse %}
 	<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
-		<h2 class="postlist-title" data-ha-exclude>
-			<a href="{{ post.url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
-		</h2>
-		<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">
-			{{ post.date | readableDate("DDD") }}
-		</time>
+		<header>
+			<h2 class="postlist-title" data-ha-exclude>
+				<a href="{{ post.url }}" class="postlist-link">
+					{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}
+				</a>
+			</h2>
+			<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">
+				{{ post.date | readableDate("DDD") }}
+			</time>
+		</header>
+
 		<blockquote class="postlist-excerpt">{% excerpt post %}</blockquote>
-		<p><a href="{{ post.url }}">Read more</a></p>
+		<p class="postlist-read_more"><a href="{{ post.url }}">Read more</a></p>
 	</li>
 {%- endfor %}
 </ol>
