--- a/css/modules/_postlist.scss
+++ b/css/modules/_postlist.scss
@@ -5,21 +5,29 @@
 
 .postlist {
 	list-style: none;
-	margin: -1rem -1rem 2rem; // to fill full width of <main>
+	margin: calc(var(--spacing-vertical) * -1)   // to start flush with <main>
+					calc(var(--spacing-horizontal) * -1) // to fill full width of <main>
+					var(--spacing-vertical);
 	padding: 0;
 }
 
 .postlist-item {
-	padding: 2rem 1rem;
 	margin: 0;
-	@include mixins.divider;
+	@include mixins.body-padding;
+	border-bottom: var(--divider);
 
-	line-height: 2;
 	word-spacing: 2px;
+
+	header {
+		display: flex;
+		flex-flow: row wrap;
+		align-items: baseline;
+		gap: 1rem 0;
+	}
 }
 
 .postlist-title {
-	display: inline-flex;
+	display: inline-block;
 	margin: 0;
 }
 
@@ -37,6 +45,6 @@
 	word-spacing: -0.5px;
 }
 
-.postlist-excerpt {
-	margin: 1em 0 0;
+.postlist-read_more {
+	@include mixins.underline-spacing;
 }
