--- a/css/modules/_tags.scss
+++ b/css/modules/_tags.scss
@@ -1,6 +1,7 @@
+@use "../mixins";
+
 /* Tags */
 .post-tag {
-	display: inline-flex;
 	align-items: center;
 	justify-content: center;
 	text-transform: capitalize;
@@ -13,14 +14,18 @@
 
 /* Tags list */
 .post-metadata {
-	display: inline-flex;
+	@include mixins.textbox-trim;
+	display: flex;
 	flex-wrap: wrap;
-	gap: .5em;
-	list-style: none;
-	padding: 0;
-	margin: 0;
+	gap: 1em;
 
-	& time {
-		margin-right: 1em;
+	ul {
+		list-style: none;
+		padding: 0;
+		margin: 0;
+	}
+
+	li {
+		display: inline-block;
 	}
 }
