--- a/css/modules/_skip-link.scss
+++ b/css/modules/_skip-link.scss
@@ -5,7 +5,7 @@
 	background: var(--background-color);
 	color: var(--text-color);
 	padding: 0.5rem 1rem;
-	border: 1px solid var(--color-gray-90);
+	border: 1px solid var(--theme-color-darkest);
 	border-radius: 2px;
 
 	/* Prevent visually-hidden skip link fom pushing content around when focused */
