--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -25,6 +25,7 @@
 	--font-family: Lusitana, Garamond, serif;
 	--font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
 	--font-size: 22px;
+	--font-size-sm: 16px;
 
 	--heading-font-family: Bellefair, serif;
 }
