--- a/css/elements/_layout.scss
+++ b/css/elements/_layout.scss
@@ -1,3 +1,4 @@
+@use "../theme";
 @use "../mixins";
 
 main,
@@ -10,4 +11,8 @@ footer {
 	:first-child {
 		margin-top: 0;
 	}
+}
+
+footer {
+	font-size: var(--font-size-sm);
 }
