--- a/css/modules/_postlist.scss
+++ b/css/modules/_postlist.scss
@@ -22,7 +22,7 @@
 		display: flex;
 		flex-flow: row wrap;
 		align-items: baseline;
-		gap: 1rem 0;
+		gap: calc(var(--spacing-vertical) * 0.5) calc(var(--spacing-horizontal) * 0.5) ;
 	}
 }
 
@@ -32,15 +32,13 @@
 }
 
 .postlist-link {
-	padding-right: .5em;
-
 	.postlist-item-active & {
 		font-weight: bold;
 	}
 }
 
 .postlist-date {
-	font-size: 0.8125em; /* 13px /16 */
+	font-size: var(--font-size-sm);
 	color: var(--heading-color);
 	word-spacing: -0.5px;
 }
