--- a/css/modules/_nav.scss
+++ b/css/modules/_nav.scss
@@ -1,3 +1,4 @@
+@use "../theme";
 @use "../mixins";
 
 /* Nav */
@@ -10,10 +11,20 @@ $nav-link-padding: 0.5em;
 	ul {
 		display: flex;
 		flex-flow: row wrap;
-		gap: var(--spacing-horizontal);
-		margin: 0 0 0 0-$nav-link-padding; // make up for side padding on nav items
+		gap: var(--spacing-vertical) var(--spacing-horizontal);
+		margin: 0;
 		padding: 0;
 		list-style: none;
+	}
+
+	> ul {
+		margin: 0 0-$nav-link-padding; // make up for side padding on nav items
+	}
+
+	svg {
+		height: var(--icon-size);
+		width: var(--icon-size);
+		transform: translateY(3px); // can't seem to get vertical alignment right otherwise
 	}
 }
 
@@ -36,4 +47,8 @@ $nav-link-padding: 0.5em;
 			text-decoration-line: underline;
 		}
 	}
+}
+
+ul.nav-socials {
+	gap: var(--spacing-horizontal) 0;
 }
