do vertical spacing in cqw instead of % to be clear on what we're measuring

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -21,7 +21,7 @@
 	--text-color-link-active: var(--theme-color-blacker);
 	--text-color-link-visited: var(--text-color-link);
 
-	--heading-color: var(--theme-color-darkest); // all one shade lighter than text
+	--heading-color: var(--theme-color-darkest); // one shade lighter than text
 	--heading-color-link: var(--theme-color-darkest);
 	--heading-color-link-hover: var(--theme-color-black);
 	--heading-color-link-active: var(--theme-color-blacker);
@@ -35,7 +35,7 @@
 	--divider-color: var(--theme-color-dark);
 	--divider: 3px double var(--divider-color);
 
-	--spacing-vertical: calc(2.3% + 1rem);
+	--spacing-vertical: calc(2.3cqw + 1rem);
 	--spacing-horizontal: 1rem;
 
 	--syntax-tab-size: 2;
@@ -51,7 +51,7 @@
 		--text-color-link-active: var(--theme-color-whiter);
 		--text-color-link-visited: var(--text-color-link);
 
-		--heading-color: var(--theme-color-lightest); // all one shade darker than text
+		--heading-color: var(--theme-color-lightest); // one shade darker than text
 		--heading-color-link: var(--theme-color-lightest);
 		--heading-color-link-hover: var(--theme-color-white);
 		--heading-color-link-active: var(--theme-color-whiter);
