link transition should only be on color, not other properties

--- a/css/elements/_body.scss
+++ b/css/elements/_body.scss
@@ -24,5 +24,5 @@ html {
 body {
 	position: relative;
 	container-type: inline-size;
-	max-width: 960px; // 60rem at 16px font size
+	max-width: 960px;
 }
