--- a/css/elements/_text.scss
+++ b/css/elements/_text.scss
@@ -15,7 +15,7 @@ p, h1, h2, h3, h4, h5, h6, blockquote {
 }
 
 a {
-	transition: 0.1s;
+	transition: color 0.1s;
 
 	&, &:link {
 		text-underline-position: from-font;
