--- a/content/tags.njk
+++ b/content/tags.njk
@@ -1,6 +1,6 @@
 <h1>Tags</h1>
 
-<ul>
+<ul class="tags-list">
 {% for tag in collections | getKeys | filterTagList | sortAlphabetically %}
 	{% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
 	<li><a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a></li>
