add Utterances Doesn't seem to work though?

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -27,3 +27,12 @@ layout: layouts/base.njk
 </ul>
 {%- endif %}
 {%- endif %}
+
+<script src="https://utteranc.es/client.js"
+	repo="Igfig/cursed-flaming-skull"
+	issue-term="pathname"
+	label="Thread"
+	theme="preferred-color-scheme"
+	crossorigin="anonymous"
+	>
+</script>
